Bug 267851 - Directories with & cause character to be underline in tab title
Summary: Directories with & cause character to be underline in tab title
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 267599 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-07 04:04 UTC by Kurt Hindenburg
Modified: 2011-05-16 03:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2011-03-07 04:04:08 UTC
Version:           4.6.999 (using Devel) 
OS:                Linux

From email:
I have a folder called "Watch&Delete" konsole shows up the present working directory on the Tabs.
and the Tab treats the &D as an ALT+D . I feel this must not happen, may be a vulnerability ?

my environment:
$konsole -v
Qt: 4.7.0
KDE Development Platform: 4.5.1 (KDE 4.5.1)
Konsole: 2.5

Reproducible: Always

Steps to Reproduce:
mkdir "A&B"
cd "A&B"
have %D as title format

Actual Results:  
AD(D is underline)

Expected Results:  
A&D
Comment 1 Kurt Hindenburg 2011-03-07 06:02:54 UTC
*** Bug 267599 has been marked as a duplicate of this bug. ***
Comment 2 Kurt Hindenburg 2011-03-07 06:18:38 UTC
Git commit 1d657aed8fd9a8f7b5563ef032d9f4a0ca0270b5 by Kurt Hindenburg.
Committed on 07/03/2011 at 06:10.
Pushed by hindenburg into branch 'master'.

Replace & with && for tab title.

If the tab title has & it will replace it by the shortcut symbol (_).

BUG: 267851
FIXED-IN: 4.6.2

M  +4    -1    src/ViewContainer.cpp     

http://commits.kde.org/konsole/1d657aed8fd9a8f7b5563ef032d9f4a0ca0270b5
Comment 3 Kurt Hindenburg 2011-03-07 22:32:37 UTC
Git commit c4fae2e105d47772f1e8c1529dd82c0b3b0accb7 by Kurt Hindenburg.
Committed on 07/03/2011 at 06:10.
Pushed by hindenburg into branch 'KDE/4.6'.

Replace & with && for tab title.

If the tab title has & it will replace it by the shortcut symbol (_).

CCBUG: 267851

M  +4    -1    src/ViewContainer.cpp     

http://commits.kde.org/konsole/c4fae2e105d47772f1e8c1529dd82c0b3b0accb7