Replace & with && for tab title.

If the tab title has & it will replace it by the shortcut symbol (_).

BUG: 267851
FIXED-IN: 4.6.2